test/syntax-errors/division-by-zero.bb

not_going_to_work = 5 / 0
